# Malware-Development-for-Ethical-Hackers

./: README.md
chapter01/: example1.c  example2.c  example3.c  example5.c
chapter01/01-whatis-malware-dev/: hack.c
chapter01/02-reverse-shell-linux/: hack2.c
chapter01/03-reverse-shell-windows/: hack3.c
chapter01/04-pefile-exe-dll/: hack4.c
chapter01/05-ransom-test/: hack5.c
chapter02/: cat.c  evil.cpp  example1.c  example2.c  example3.c  example4_1.c  example5.cpp  pet.cpp
chapter02/01-traditional-injection/: evil.c  hack1.c  hack2.c  hack3.c
chapter02/03-apc-injection/: hack1.c  hack2.c
chapter02/04-api-hooking/: cat.c  example5.cpp  hack1.c  pet.cpp
chapter03/01-classic-path-registry-run-keys/: hack.c  pers.c
chapter03/02-leveraging-registry-keys-utilised-by-winlogon-process/: pers.c
chapter03/04-exploring-windows-services-for-persistence/: meowsrv.c
chapter03/05-exploring-non-trivial-loopholes/: hack.c  pers.c  pers.cpp
chapter03/classic-path-registry-run-keys/: hack.c  pers.cpp
chapter03/implementing-dll-search-order-hijacking/: evil.c
chapter03/leveraging-registry-keys-utilised-by-winlogon-process/: pers.cpp
chapter04/01-token-theft/: hack.c
chapter04/02-lsass-dump/: hack.c  procfind.c
chapter04/03-dll-hijacking/: hack.c  hack2.c
chapter04/04-uac-bypass/: hack.c
chapter05/01-detect-debug/: hack.c  hack2.c
chapter05/02-breakpoints/: hack.c
chapter05/03-flags-artifacts/: hack.c  hack2.c
chapter06/01-filesystem/: hack.c
chapter06/02-hardware/: hack.c
chapter06/03-time-based/: hack.c
chapter06/04-registry/: hack.c
chapter07/01-asm-code-obfuscation/: hack.c
chapter07/02-combined-jz-jnz/: hack.c
chapter07/03-function-pointers/: hack.c
chapter07/04-winapi-hashing/: hack.c  hash.ps1
chapter07/05-crashing-tools/: hack.c
chapter08/01-evasion-static-xor/: hack.c  hack2.c  hack3.c  xor.py
chapter08/02-evasion-dynamic/: hack.c
chapter08/04-evasion-advanced/: evil.c  hack.c  hack2.c  hack3.c  hack4.c  syscall.asm
chapter09/02-dive-into-hashing/: bcrypt.c  calc-bcrypt.py  calc-md5.py  calc-sha1.py  ex1_sha256.c  ex2_bcrypt.c  md5.c  sha256.c
chapter09/03-practical-use-hashing/: hack.c  meow.c  murmurhash.c  myhash.py
chapter10/01-simple-reverse-shell/: hack.c
chapter10/02-rot13/: hack.c
chapter10/03-caesar/: hack.c
chapter10/03-rot47/: hack.c
chapter10/04-base64/: hack.c  hack2.c
chapter10/05-base64-rc4/: hack.c
chapter10/1-simple-reverse-shell/: hack.c
chapter10/2-rot13/: hack.c
chapter10/3-caesar/: hack.c
chapter10/4-base64/: hack.c
chapter11/01-config-crypto/: config.txt  encrypt.c  evil.c  hack.c
chapter11/02-malware-communication/: hack.c  server.crt  server.key  server.py
chapter11/03-payload-obfuscation-automation/: encrypt.py  temp-enc.c  temp.c
chapter12/01-advanced-math/: hack.c  hack2.c
chapter12/02-prime-numbers/: hack.c  hack2.c  hack3.c
chapter12/03-custom-encoding/: hack.c
chapter12/04-ecc/: hack.py  sample.txt  sample.txt.enc
chapter13/04-lessons-learned-classic-malware/: hack.c
chapter14/04-ttps-used-by-apt/: evil.c  pers.cpp
chapter14/04-ttps-used-by-apt/example1/: pers.c  pers.cpp
chapter14/04-ttps-used-by-apt/example2/: hack.c  pers.c  pers.cpp
chapter14/04-ttps-used-by-apt/example3/: hack.c
chapter15/02-impact-code-leaks/: hack.c  processes.txt
chapter16/01-analysis-of-ransomware/conti_v3/: conti_v3.sln
chapter16/01-analysis-of-ransomware/conti_v3/cryptor/: cryptor.cpp  cryptor.vcxproj  cryptor.vcxproj.filters  main.cpp  memory.h  mrph.h
chapter16/01-analysis-of-ransomware/conti_v3/cryptor_dll/: common.h  cryptor.cpp  cryptor.h  cryptor_dll.vcxproj  cryptor_dll.vcxproj.filters  main.cpp  memory.cpp
chapter16/01-analysis-of-ransomware/conti_v3/decryptor/: common.h  decryptor.cpp  decryptor.h  decryptor.vcxproj  decryptor.vcxproj.filters  main.cpp  memory.h
chapter16/01-analysis-of-ransomware/hellokitty/: .gitignore  Innocent.sln  enc-struct.h  new-private-ntru-key-debug.h  new-private-ntru-key-release.h  new-public-ntru-key-debug.h  new-public-ntru-key-release.h  processnames.h  random.h
chapter16/01-analysis-of-ransomware/hellokitty/NTRUEncrypt/: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  PATENTS  README  autogen.sh  configure.ac  libntruencrypt.sym
chapter16/01-analysis-of-ransomware/hellokitty/NTRUEncrypt/driver_test/: Makefile.old  __ntruEncrypt.c
chapter16/01-analysis-of-ransomware/hellokitty/NTRUEncrypt/include/: ntru_crypto.h  ntru_crypto_drbg.h  ntru_crypto_error.h  ntru_crypto_platform.h
chapter16/01-analysis-of-ransomware/hellokitty/NTRUEncrypt/sample/: sample_NTRUEncrypt.c
chapter16/01-analysis-of-ransomware/hellokitty/NTRUEncrypt/src/: ntru_crypto_drbg.c  ntru_crypto_hash.c  ntru_crypto_hash.h  ntru_crypto_hash_basics.h  ntru_crypto_hmac.c  ntru_crypto_hmac.h  ntru_crypto_msbyte_uint32.c  ntru_crypto_msbyte_uint32.h  ntru_crypto_ntru_convert.c  ntru_crypto_ntru_convert.h  ntru_crypto_ntru_encrypt.c  ntru_crypto_ntru_encrypt_key.c  ntru_crypto_ntru_encrypt_key.h  ntru_crypto_ntru_encrypt_param_sets.c  ntru_crypto_ntru_encrypt_param_sets.h  ntru_crypto_ntru_mgf1.c  ntru_crypto_ntru_mgf1.h  ntru_crypto_ntru_mult_coeffs_karat.c  ntru_crypto_ntru_mult_coeffs_simd.c  ntru_crypto_ntru_mult_indices.c  ntru_crypto_ntru_mult_indices_32.c  ntru_crypto_ntru_mult_indices_64.c  ntru_crypto_ntru_mult_indices_simd.c  ntru_crypto_ntru_poly.c  ntru_crypto_ntru_poly.h  ntru_crypto_sha.h  ntru_crypto_sha1.c  ntru_crypto_sha1.h  ntru_crypto_sha2.c  ntru_crypto_sha2.h  ntru_crypto_sha256.c  ntru_crypto_sha256.h
chapter16/01-analysis-of-ransomware/hellokitty/NTRUEncrypt/test/: bench.c  check_common.c  check_common.h  check_internal.c  check_internal_key.c  check_internal_mgf.c  check_internal_poly.c  check_internal_sha.c  check_public.c  sanity.c  test_common.c  test_common.h
chapter16/01-analysis-of-ransomware/hellokitty/NTRUEncrypt/vs2012/: NtruBuild.sln  NtruEncrypt_DLL.vcxproj  Sample_NTRUEncrypt.vcxproj
chapter16/03-case-studies/: hack.c  test.txt.AES  test.txt.decrypted
(+56 files in other folders)
